etc/iptables/iptables.rules
# Generated by iptables-save v1.8.5 on Sun Sep 13 20:48:36 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:ICMP - [0:0]
:INVALID - [0:0]
:TCP - [0:0]
:TCP_DOLPHIN_NETPLAY - [0:0]
:TCP_KDECONNECT - [0:0]
:TCP_PS4_REMOTE_PLAY - [0:0]
:TCP_STEAM - [0:0]
:UDP - [0:0]
:UDP_DOLPHIN_NETPLAY - [0:0]
:UDP_KDECONNECT - [0:0]
:UDP_MDNS - [0:0]
:UDP_PS4_REMOTE_PLAY - [0:0]
:UDP_STEAM - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j INVALID
-A INPUT -j ICMP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -j LOG --log-prefix "FINAL: "
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A ICMP -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A ICMP -p icmp -j LOG --log-prefix "ICMP: "
-A ICMP -p icmp -j REJECT --reject-with icmp-proto-unreachable
-A INVALID -m conntrack --ctstate INVALID -j LOG --log-prefix "INVALID: "
-A INVALID -m conntrack --ctstate INVALID -j DROP
-A TCP -j TCP_DOLPHIN_NETPLAY
-A TCP -j TCP_KDECONNECT
-A TCP -j TCP_PS4_REMOTE_PLAY
-A TCP -j TCP_STEAM
-A TCP -p tcp -j LOG --log-prefix "TCP: "
-A TCP -p tcp -j REJECT --reject-with tcp-reset
-A TCP_DOLPHIN_NETPLAY -p tcp -m tcp --dport 2626 -j ACCEPT
-A TCP_KDECONNECT -s 192.168.1.0/24 -p tcp -m multiport --dports 1714:1764 -j ACCEPT
-A TCP_PS4_REMOTE_PLAY -p tcp -m tcp --dport 9295 -j ACCEPT
-A TCP_STEAM -p tcp -m multiport --dports 27014:27050 -j ACCEPT
-A UDP -j UDP_DOLPHIN_NETPLAY
-A UDP -j UDP_KDECONNECT
-A UDP -j UDP_MDNS
-A UDP -j UDP_PS4_REMOTE_PLAY
-A UDP -j UDP_STEAM
-A UDP -p udp -j LOG --log-prefix "UDP: "
-A UDP -p udp -j REJECT --reject-with icmp-port-unreachable
-A UDP_DOLPHIN_NETPLAY -p udp -m udp --dport 2626 -j ACCEPT
-A UDP_KDECONNECT -s 192.168.1.0/24 -p udp -m multiport --dports 1714:1764 -j ACCEPT
-A UDP_MDNS -s 192.168.1.0/24 -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A UDP_PS4_REMOTE_PLAY -p udp -m udp --dport 9304 -j ACCEPT
-A UDP_PS4_REMOTE_PLAY -p udp -m multiport --dports 9295:9297 -j ACCEPT
-A UDP_STEAM -p udp -m udp --dport 4380 -j ACCEPT
-A UDP_STEAM -p udp -m multiport --dports 27000:27037 -j ACCEPT
-A UDP_STEAM -p udp -m multiport --dports 28015:28075 -j ACCEPT
COMMIT
# Completed on Sun Sep 13 20:48:36 2020
